OpenLDAP 2.3 Change Log

OpenLDAP 2.3.36 Engineering
	Fixed slapd error code on Windows (ITS#4945, #4606)
	Fixed slapd mutex bug after failed startup (ITS#4957)
	Fixed slapd-bdb no-op crasher (ITS#4925)
	Fixed slapd-config olcModuleLoad replace (ITS#4921)
	Fixed slapd-relay crash when no database can be selected (ITS#4958)
	Fixed slapo-chain RFC3062 passwd exop handling (ITS#4964)
	Fixed libldap response code handling on rebind (ITS#4924)
	Fixed libldap SASL_MAX_BUFF_SIZE (ITS#4935)
	Fixed libldap_r thread debug issues (ITS#4972)
	Build Environment
		Fixed --disable-overlays Makefile problem (ITS#4988)
	Documentation
		Updated slapadd(8) with details on -s option
		Updated slapo-ppolicy(5) for pwdAccountLockedTime zero example (ITS#4978)

OpenLDAP 2.3.35 Release (2007/04/09)
	Fixed ldapmodify to use correct memory free functions (ITS#4901)
	Fixed slapd acl set minor typo (ITS#4874)
	Fixed slapd entry consistency check in str2entry2 (ITS#4852)
	Fixed slapd ldapi:// credential issue (ITS#4893)
	Fixed slapd str2anlist handling of undefined attrs/OCs (ITS#4854)
	Fixed slapd syncrepl delta-sync modlist free (ITS#4904)
	Added slapd syncrepl retry logging (ITS#4915)
	Fixed slapd zero-length IA5string handling (ITS#4823)
	Fixed slapd-bdb/hdb startup with missing shm env (ITS#4851)
	Fixed slapd-ldap/meta consistency in referral proxying (ITS#4861)
	Fixed slapd-ldap bind cleanup in case of unauthorized idassert
	Fixed slapd-meta search cleanup
	Fixed slapd-meta/slapo-rwm filter mapping
	Fixed slapd-sql subtree shortcut (ITS#4856)
	Fixed slapo-dynlist crasher (ITS#4891)
	Fixed slapo-refint config message (ITS#4853)
	Fixed libldap time_t signedness (ITS#4872)
	Fixed libldap_r tpool reset (ITS#4855,#4899)
	Documentation
		Misc Doc fixes (ITS#4863, ITS#4877, ITS#4885, ITS#4897)

OpenLDAP 2.3.34 Release (2007/02/16)
	Fixed libldap missing get_option(TLS CipherSuite) (ITS#4815)
	Fixed ldapmodify printing error from ldap_result() (ITS#4812)
	Fixed slapadd LDIF parsing (ITS#4817)